Fixing bug where overflow is not treated properly on mobile devices

--- a/src/components/search/searchInformationForm/searchInformationForm.css
+++ b/src/components/search/searchInformationForm/searchInformationForm.css
@@ -111,6 +111,9 @@
     flex-direction: column;
     align-items: center;
     padding-top: 50px;
+    height: min(80vh, 600px);
+    /* background-color: transparent;
+    box-shadow: none; */
   }
   .halfWidthInfoBlock {
     width: 100%;
